k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: compliance-demo
  labels:
    policy.sigstore.dev/include: "true"
