k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pagamentos
  namespace: compliance-demo
spec:
  selector:
    app: api-pagamentos
  ports:
    - name: http
      port: 80
      targetPort: 8080
