k8s/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredrunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRunAsNonRoot
      validation:
        openAPIV3Schema:
          type: object
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredrunasnonroot
        violation[{"msg": msg}] {
          input.review.kind.kind == "Deployment"
          not input.review.object.spec.template.spec.securityContext.runAsNonRoot
          msg := "Deployment deve definir spec.template.spec.securityContext.runAsNonRoot=true"
        }
